feat: add with_relation_labels flag in list subscription
